--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -111,10 +111,6 @@ legend {
 
 
 
-
-
-
-
 a {
   text-decoration: none;
 }
@@ -133,11 +129,19 @@ p {
 
 .fa {
   display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-
+  font-family: FontAwesome;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
+  &__fa-edit:before {
+    content: "\f044";
+  }
+  &__fa-cog:before {
+    content: "\f013";
+  }
+  &__fa-image:before {
+    content: "\f03e";
+  }
 }
 
 .body {
@@ -147,143 +151,5 @@ p {
     font-weight: lighter;
     text-align: center;
     width: 100vw;
-    &__chat-side {
-      width: 300px;
-      color: white;
-      float: left;
-      &__side-header {
-        background-color: #253141;
-        height: 100px;
-        display: flex;
-        align-items: center;
-        padding: 0, 20px;
-        &__box {
-          display: flex;
-          justify-content: space-between;
-          width: 100%;
-          font-weight: bold;
-          &__menu {
-            display: flex;
-      &__groups {
-        height: calc(100vh - 100px);
-        background-color: #2f3e51;
-        padding: 20px, 20px, 0;
-        overflow: scroll;
-        &__group {
-          margin-bottom: 40px;
-        &__group-name {
-          font-size: 15px;
-          margin-bottom: 5px;
-        &__latest-message {
-          font-size: 11px;
-    &__chat-main {
-      width: calc(100vw - 300px);
-      float: left;
-      &__main-header {
-        height: 100px;
-        padding: 0, 40px;
-        display: flex;
-        justify-content: space-between;
-        border-bottom: solid 1px, #eee;
-        overflow: scroll;
-        &__left-box {
-          margin-top: 35px;
-          &__current-group {
-            font-size: 20px;
-            color: #333;
-            margin-bottom: 15px;
-          &__member-list {
-            display: flex;
-            font-size: 12px;
-            color: #999999;
-        &__edit-btn {
-          height: 40px;
-          line-height: 40px;
-          padding: 0, 20px;
-          margin-top: 30px;
-          color: #38aef0;
-          border: solid 1px, #38aef0;
-          position: absolute;
-          right: 40px;
-      &__messages {
-        height: calc(100vh - 190px);
-        padding: 46px, 40px;
-        background-color: #fafafa;
-        overflow: scroll;
-        &__message {
-          padding-bottom: 40px;
-          &__upper-info {
-            display: flex;
-            margin-bottom: 10px;
-            &__talker {
-              color: #434a54;
-              font-size: 16px;
-              font-weight: bold;
-            &__date {
-              color: #999999;
-              font-size: 12px;
-              margin-left: 10px;
-          &__text {
-            color: #434a54;
-            font-size: 14px;
-            margin-bottom: 10px;
-      &__form {
-        height: 90px;
-        padding: 20px, 40px;
-        background-color: #ddd;
-        &__new-message {
-          display: flex;
-        &__input-box {
-          position: relative;
-          width: 100%;
-          &__text {
-            height: 50px;
-            width: 100%;
-            padding: 0, 40px, 0, 10px;
-            color: #434a54;
-            border-style: none;
-          &__image {
-            font-size: 1.3rem;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            &__file {
-              display: none;
-        &__submit-btn {
-          width: 100px;
-          height: 50px;
-          padding: 0, 30px;
-          margin-left: 15px;
-          background-color: #38aef0;
-          color: white;
-          cursor: pointer;
-        }
-            }
-          }
-          }
-        }
-        }
-      }
-            }
-            }
-          }
-        }
-      }
-    }
   }
-    }
-    }
-    }
-  }
-        }
-          }
-          }
-        }
-      }
-    }
-    }
-  }
-}
-}
 }
