--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -1,32 +1,31 @@
-.chat-side {
+.Chat-side {
   width: 300px;
   color: white;
   float: left;
-  &__side-header {
+  .Side-header {
     background-color: #253141;
     height: 100px;
     display: flex;
     align-items: center;
     padding: 0, 20px;
-  }
     &__box {
       display: flex;
       justify-content: space-between;
       width: 100%;
       font-weight: bold;
-    }
       &__menu {
         display: flex;
       }
-  &__groups {
-    height: calc(100vh - 100px);
-    background-color: #2f3e51;
-    padding: 20px, 20px, 0;
-    overflow: scroll;
-  }
-    &__group {
-      margin-bottom: 40px;
     }
+  }
+}
+.Groups {
+  height: calc(100vh - 100px);
+  background: #2f3e51;
+  padding: 20px, 20px, 0;
+  overflow: scroll;
+  .Group {
+    margin-bottom: 40px;
     &__group-name {
       font-size: 15px;
       margin-bottom: 5px;
@@ -34,4 +33,5 @@
     &__latest-message {
       font-size: 11px;
     }
+  }
 }
