--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,10 +22,15 @@
       %label.chat-group-form__label{for: "members"} チャットメンバー
     .chat-group-form__field--right
       #chat-group-users
-        .chat-group-user.clearfix
-          %input{name: "chat_group[user_ids][]", type: "hidden", value: current_user.id}/
-          %p.chat-group-user__name
-            = current_user.name
+        -# .chat-group-user.clearfix
+        -#   %input{name: "chat_group[user_ids][]", type: "hidden", value: current_user.id}/
+        -#   %p.chat-group-user__name
+        -#     = current_user.name
+        - @group.users.each do |user|
+          .chat-group-user.clearfix{id: "#{user.id}"}
+            = f.hidden_field :user_ids, name: 'group[user_ids][]', value: "#{user.id}"
+            %p.chat-group-user__name
+              = user.name
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
