--- a/app/assets/stylesheets/messages/_chat-main.scss
+++ b/app/assets/stylesheets/messages/_chat-main.scss
@@ -27,7 +27,7 @@
     }
   }
     &__edit-btn {
-      height: 40px;
+      height: 35px;
       margin-top: 30px;
       padding-left: 20px;
       padding-right: 20px;
@@ -38,6 +38,6 @@
     }
 }
 
-.h3 {
+.btn {
   color: $light_blue;
 }
